--- a/index.html
+++ b/index.html
@@ -128,70 +128,42 @@
 
         <!-- Supported Sites -->
         <section id="supported" class="bg-white rounded-2xl shadow-lg p-8 animate-fade-in">
-            <h3 class="text-2xl font-bold text-gray-800 mb-6 text-center">Supported Platforms</h3>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fab fa-youtube text-red-600 text-4xl mb-3"></i>
-                    <span class="font-semibold">YouTube</span>
-                </div>
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fab fa-tiktok text-black text-4xl mb-3"></i>
-                    <span class="font-semibold">TikTok</span>
-                </div>
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fab fa-instagram text-pink-600 text-4xl mb-3"></i>
-                    <span class="font-semibold">Instagram</span>
-                </div>
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fab fa-facebook text-blue-700 text-4xl mb-3"></i>
-                    <span class="font-semibold">Facebook</span>
-                </div>
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fab fa-twitter text-blue-400 text-4xl mb-3"></i>
-                    <span class="font-semibold">Twitter / X</span>
-                </div>
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fab fa-reddit text-orange-500 text-4xl mb-3"></i>
-                    <span class="font-semibold">Reddit</span>
-                </div>
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fas fa-video text-purple-600 text-4xl mb-3"></i>
-                    <span class="font-semibold">Vimeo</span>
-                </div>
-                <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
-                    <i class="fas fa-globe text-green-600 text-4xl mb-3"></i>
-                    <span class="font-semibold">1000+ Sites</span>
-                </div>
-            </div>
-        </section>
+    <h3 class="text-2xl font-bold text-gray-800 mb-6 text-center">Supported Platforms</h3>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+        <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition">
+            <i class="fab fa-youtube text-red-600 text-4xl mb-3"></i>
+            <span class="font-semibold">YouTube</span>
+        </div>
+        <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition opacity-60">
+            <i class="fab fa-tiktok text-black text-4xl mb-3"></i>
+            <span class="font-semibold">TikTok</span>
+            <span class="text-xs text-gray-500 mt-1">(Coming Soon)</span>
+        </div>
+        <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition opacity-60">
+            <i class="fab fa-instagram text-pink-600 text-4xl mb-3"></i>
+            <span class="font-semibold">Instagram</span>
+            <span class="text-xs text-gray-500 mt-1">(Coming Soon)</span>
+        </div>
+        <div class="flex flex-col items-center p-4 bg-gray-50 rounded-xl hover:shadow-md transition opacity-60">
+            <i class="fas fa-plus text-blue-600 text-4xl mb-3"></i>
+            <span class="font-semibold">More Sites</span>
+            <span class="text-xs text-gray-500 mt-1">(Coming Soon)</span>
+        </div>
+    </div>
+</section>
 
         <!-- How to Use -->
-        <section class="mt-12 bg-gradient-to-r from-blue-50 to-purple-50 rounded-2xl shadow-lg p-8 animate-fade-in">
-            <h3 class="text-2xl font-bold text-gray-800 mb-6 text-center">How to Use</h3>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="text-center">
-                    <div class="bg-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 shadow-md">
-                        <i class="fas fa-link text-2xl text-blue-600"></i>
-                    </div>
-                    <h4 class="font-bold text-lg mb-2">1. Copy Video URL</h4>
-                    <p class="text-gray-600">Copy the video link from your browser</p>
-                </div>
-                <div class="text-center">
-                    <div class="bg-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 shadow-md">
-                        <i class="fas fa-paste text-2xl text-purple-600"></i>
-                    </div>
-                    <h4 class="font-bold text-lg mb-2">2. Paste & Choose</h4>
-                    <p class="text-gray-600">Paste URL and select video or audio format</p>
-                </div>
-                <div class="text-center">
-                    <div class="bg-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 shadow-md">
-                        <i class="fas fa-download text-2xl text-green-600"></i>
-                    </div>
-                    <h4 class="font-bold text-lg mb-2">3. Download</h4>
-                    <p class="text-gray-600">Click download and save to your device</p>
-                </div>
-            </div>
-        </section>
+        <section class="mt-8 bg-yellow-50 rounded-2xl p-6 border border-yellow-200">
+    <h3 class="text-lg font-bold text-gray-800 mb-3 flex items-center">
+        <i class="fas fa-info-circle text-yellow-500 mr-2"></i>
+        Current Status
+    </h3>
+    <p class="text-gray-700">
+        <strong>Version 1.0:</strong> Currently supports <strong>YouTube videos only</strong>. 
+        Support for TikTok, Instagram, Facebook, and other platforms will be added in future updates. 
+        Paste any public YouTube video URL to get started!
+    </p>
+</section>
 
         <!-- Disclaimer -->
         <section class="mt-12 bg-gray-100 rounded-2xl p-6 border border-gray-300">
